Fixes #34755 - Fix text/icon alignment on host status card

--- a/webpack/assets/javascripts/react_app/components/HostDetails/Status/styles.scss
+++ b/webpack/assets/javascripts/react_app/components/HostDetails/Status/styles.scss
@@ -1,5 +1,11 @@
-.card-pf-aggregate-status-notifications .aggregate-text {
+.card-pf-aggregate-status-notifications a.aggregate-text {
   font-size: 16px;
+  &:hover {
+    text-decoration: none;
+    span:last-child {
+      text-decoration: underline;
+    }
+  }
 }
 
 .disabled {
